# ebook-organizer

./: .gitmodules  pyproject.toml
ebooks/: mobi  organize.py
tests/: test_organize.py
tests/data/: Angie Sage - The Magykal Papers.epub  Storm Savage - Perfect Strangers 01 Blaze of Fury.mobi
tests/data/Septimus Heap/: Angie Sage_Septimus Heap_01 - Magyk.epub  Angie Sage_Septimus Heap_02 - Flyte.epub  Angie Sage_Septimus Heap_03 - Physik.epub  Angie Sage_Septimus Heap_04 - Queste.epub  Angie Sage_Septimus Heap_05 - Syren.epub  Angie Sage_Septimus Heap_06 - Darke.epub  Magyk - Angie Sage.epub
