[tool.poetry]
name = "ebooks"
version = "0.1.0"
description = "Organize an ebook library into folders by author"
authors = ["Nick Thurmes <nthurmes@gmail.com>"]
license = "gpl-v3-or-later"

[tool.poetry.dependencies]
python = "^3.6"
epub_meta = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
